--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -1,3 +1,14 @@
+@article{marabita2013evaluation,
+  title={An evaluation of analysis pipelines for DNA methylation profiling using the Illumina HumanMethylation450 BeadChip platform},
+  author={Marabita, Francesco and Almgren, Malin and Lindholm, Mal{\'e}ne E and Ruhrmann, Sabrina and Fagerstr{\"o}m-Billai, Fredrik and Jagodic, Maja and Sundberg, Carl J and Ekstr{\"o}m, Tomas J and Teschendorff, Andrew E and Tegn{\'e}r, Jesper and others},
+  journal={Epigenetics},
+  volume={8},
+  number={3},
+  pages={333--346},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
 @article{horvath2018epigenetic,
   title={Epigenetic clock for skin and blood cells applied to Hutchinson Gilford Progeria Syndrome and ex vivo studies},
   author={Horvath, Steve and Oshima, Junko and Martin, George M and Lu, Ake T and Quach, Austin and Cohen, Howard and Felton, Sarah and Matsuyama, Mieko and Lowe, Donna and Kabacik, Sylwia and others},
