--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -43,14 +43,25 @@ The main aim of this package is to facilitate the interconnection with R and Bio
 
 # Getting started
 
-Package can be installed by executing:
+The package depends on some R packages that can be previously installed into your computer by:
+
+```{r install_req_packages, eval=FALSE}
+library(BiocManager)
+install(c("impute", "Rcpp"))
+
+library(devtools)
+install_github("perishky/meffil")
+```
+
+
+Then `methylclock` package is installed into your computer by executing:
 
 ```{r install_packages, eval=FALSE}
 library(devtools)
 install_github("isglobal-brge/methylclock")
 ``` 
 
-Then, the package is loaded into R as usual:
+The package is loaded into R as usual:
 
 ```{r load_package}
 library(methylclock)
@@ -83,7 +94,7 @@ The methylation data is given in the argument `x`. They can be either beta or M 
 In principle, data can be normalized by using any of the existing standard methods such as QN, ASMN, PBC, SWAN, SQN, BMIQ (see a revision of those methods in @wang2015systematic). `DNAmAge` function includes the BMIQ method proposed by @teschendorff2012beta using Horvath's robust implementation that basically consists of an optimal R code implementation and optimization procedures. This normalization is recommended by Horvath since it improves their predictions. This normalization procedure is very time-consuming. In order to overcome these difficulties, we have parallelize this process using `BiocParallel` library. This step is not mandatory, so that, you can use your normalized data and set the argument `normalize` equal to FALSE (default).
 
 ## Missing data
-All the implemented methods require complete cases. `DNAmAge` function implements an imputation method based on KNN implemented in the function `knn.impute` from `impute` package. This is performed when missing data is present in the CpGs used in Horvath's method. There is also another option based on a fast imputation method that uses a set of ~21K CpGs as reference to impute missing data which are proposed by Horvath's method. This can be performed by setting `fastImp=TRUE` and, of course, it is only recommended for 27K arrays. 
+All the implemented methods require complete cases. `DNAmAge` function has an imputation method based on KNN implemented in the function `knn.impute` from `impute` Bioconductor package. This is performed when missing data is present in the CpGs used in Horvath's method. There is also another option based on a fast imputation method that uses a set of ~21K CpGs as reference to impute missing data which are proposed by Horvath's method. This can be performed by setting `fastImp=TRUE` and, of course, it is only recommended for 27K arrays. 
 
 ## Cell counts
 The EEAA method requires to estimate cell counts. We use the package `meffil` (@min2018meffil) that provides some functions to estimate cell counts using predefined datasets. This is performed by setting `cell.count=TRUE` (default value). The reference panel is passed through the argument `cell.count.reference`. So far, the following options are available:
@@ -99,42 +110,91 @@ The EEAA method requires to estimate cell counts. We use the package `meffil` (@
 
 # Illustrative examples
 
-## Horvath's example
-Let us start by reproducing the results proposed in @horvath2013dna. The file 'MethylationDataExample55.csv" contains an example used in their tutorial (available [here](https://dnamage.genetics.ucla.edu/home)). These data are available when loading `methylclock` package as tibble which is one of the possible formats of `DNAmAge` function
+## Horvath's example (data in `csv` format)
+Let us start by reproducing the results proposed in @horvath2013dna. The file 'MethylationDataExample55.csv" contains an example used in their tutorial (available [here](https://dnamage.genetics.ucla.edu/home)). These data are available through `methylclock` package. Although these data can be loaded into R by using standard functions such as `read.csv` we hihgly recommend to use functions from `tidiverse`, in particular `read_csv` from `readr` package. The main reason is that currently researchers are analyzing Illumina 450K or EPIC arrays that contains a huge number of CpGs that can take a long time to be loaded when using basic importing R function. These functions import `csv` data as tibble which is one of the possible formats of `DNAmAge` function
 
 ```{r load_horvath_example}
-MethylationDataExample55
+library(tidyverse)
+path <- system.file("extdata", package = "methylclock")
+MethylationData <- read_csv(file.path(path,
+                                      "MethylationDataExample55.csv"))
+MethylationData
 ```
 
-Covariates (sample annotation data) are available at 'SampleAnnotationExample55.csv' file that is also available at `methylclocl` package:
+*IMPORTANT NOTE*: Be sure that the first column contains the CpG names. Sometimes, your imported data look like this one (it can happen, for instance, if the `csv` file was created in R without indicating `row.names=FALSE`)
+
+```
+> mydata
+
+# A tibble: 473,999 x 6
+      X1 Row.names BIB_15586_1X BIB_33043_1X EDP_5245_1X KAN_584_1X 
+   <int> <chr>            <dbl>        <dbl>       <dbl>      <dbl>     
+ 1     1 cg000000~       0.635        0.575       0.614      0.631     
+ 2     2 cg000001~       0.954        0.948       0.933      0.950     
+ 3     3 cg000001~       0.889        0.899       0.901      0.892     
+ 4     4 cg000001~       0.115        0.124       0.107      0.123     
+ 5     5 cg000002~       0.850        0.753       0.806      0.815     
+ 6     6 cg000002~       0.676        0.771       0.729      0.665     
+ 7     7 cg000002~       0.871        0.850       0.852      0.863     
+ 8     8 cg000003~       0.238        0.174       0.316      0.206
+```
+
+If so, the first column must be removed before being used as the input object in `DNAmAge` funcion. It can be done using `dplyr` function
+
+```
+> mydata2 <- select(mydata, -1)
+
+# A tibble: 473,999 x 5
+      Row.names BIB_15586_1X BIB_33043_1X EDP_5245_1X KAN_584_1X 
+    <chr>            <dbl>        <dbl>       <dbl>      <dbl>     
+ 1    cg000000~       0.635        0.575       0.614      0.631     
+ 2    cg000001~       0.954        0.948       0.933      0.950     
+ 3    cg000001~       0.889        0.899       0.901      0.892     
+ 4    cg000001~       0.115        0.124       0.107      0.123     
+ 5    cg000002~       0.850        0.753       0.806      0.815     
+ 6    cg000002~       0.676        0.771       0.729      0.665     
+ 7    cg000002~       0.871        0.850       0.852      0.863     
+ 8    cg000003~       0.238        0.174       0.316      0.206
+```
+
+In any case, if you use the object `mydata` that contains the CpGs in the second column, you will see this error message:
+
+```
+> DNAmAge(mydata)
+Error in DNAmAge(mydata) : First column should contain CpG names
+```
+
+Covariates (metadata or sample annotation data) are available at 'SampleAnnotationExample55.csv' file that is also available at `methylclock` package:
 
 ```{r covariates_horvath_example}
-SampleAnnotationExample55
+covariates <- read_csv(file.path(path, 
+                                 "SampleAnnotationExample55.csv"))
+covariates
 ```
 
 Cronological age is required to compute some of the age estimators. In this example, the variable `Age` is encoding such information:
 
 ```{r age_horvath_example}
-age <- SampleAnnotationExample55$Age
+age <- covariates$Age
 head(age)
 ``` 
 
 The different methylation ages can be simply computed by:
 
 ```{r DNAmAge_horvath}
-age.example55 <- DNAmAge(MethylationDataExample55, age=age)
+age.example55 <- DNAmAge(MethylationData, age=age)
 age.example55
 ```
 
 Then, we can compare, for instance, the DNAmAge estimates between Autistic and control individuals by using a non-parametric test (low sample size)
 
 ```{r compare_autistic}
-autism <- SampleAnnotationExample55$diseaseStatus
+autism <- covariates$diseaseStatus
 kruskal.test(age.example55$Horvath ~ autism)
 kruskal.test(age.example55$BNN ~ autism)
 ```
 
-## DNAmAge prediction on healthy people 
+## DNAmAge prediction on healthy people (`ExpressionSet` data)
 
 One may be interested in assessing association between chronologial age and DNA methylation age or evaluating how well chronological age is predicted by DNAmAge. In other to illustrate this analysis we downloaded data from GEO corresponding to a set of healthy individuals (GEO accession number GSE58045). Data can be retrieved into R by using `GEOquery` package as an `ExpressionSet` object that can be the input of our main function. 
 
@@ -152,6 +212,7 @@ gse58045
 The chronological age is obtained by using `pData` function from  `Biobase` package that is able to deal with `ExpressionSet` objects:
 
 ```{r age_gse58045}
+library(Biobase)
 pheno <- pData(gse58045)
 age <- as.numeric(pheno$`age:ch1`)
 ``` 
