bug fixed in test + new implementations of imputation + coef Hannum OK

--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -158,3 +158,15 @@
   year={2016},
   publisher={BioMed Central}
 }
+
+
+@article{bohlin2016prediction,
+  title={Prediction of gestational age based on genome-wide differentially methylated regions},
+  author={Bohlin, Jon and H{\aa}berg, Siri Eldevik and Magnus, Per and Reese, Sarah E and Gjessing, H{\aa}kon K and Magnus, Maria Christine and Parr, Christine Louise and Page, CM and London, Stephanie J and Nystad, Wenche},
+  journal={Genome biology},
+  volume={17},
+  number={1},
+  pages={207},
+  year={2016},
+  publisher={BioMed Central}
+}
