--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -30,9 +30,9 @@ This manual describes how to estimate DNA methylation age (DNAmAge) using differ
 
 - **DNAmAge** (Horvath's method): It uses 353 CpGs described in @horvath2013dna.
 - **AgeAcDiff** (DNAmAge acceleration difference): Difference between DNAmAge and chronological age.
-- **IEAA** (Intrinsic Epigenetic Age Acceleration): Residuals obtained after regressing DNAmAge and chronological age. This measure was also known as DNAmAge acceleration residual in the first Horvath's paper.
-- **EEAA** (Extrinsic Epigenetic Age Acceleration): Residuals obtained after regressing DNAmAge and chronological age adjusted by cell counts. 
-- **Hannum's** method: It uses 50 CpGs described in @hannum2013genome.
+- **IEAA** (Intrinsic Epigenetic Age Acceleration): Residuals obtained after regressing DNAmAge and chronological age adjusted by cell counts. 
+- **EEAA** (Extrinsic Epigenetic Age Acceleration): Residuals obtained after regressing DNAmAge and chronological age. This measure was also known as DNAmAge acceleration residual in the first Horvath's paper.
+- **Hannum's** method: It uses 71 CpGs described in @hannum2013genome.
 - **AMAR** (Apparent Methylomic Aging Rate): Measure proposed in @hannum2013genome computed as the ratio between DNAm age and the chronological age.
 - **DNAm PhenoAge** (Levine's method): It uses 513 CpGs described in @levine2018epigenetic. 
 - **BNN**: It uses Horvath's CpGs to train a Bayesian Neural Network (BNN) to predict DNAmAge as described in @alfonso2018.
@@ -94,7 +94,7 @@ The methylation data is given in the argument `x`. They can be either beta or M 
 In principle, data can be normalized by using any of the existing standard methods such as QN, ASMN, PBC, SWAN, SQN, BMIQ (see a revision of those methods in @wang2015systematic). `DNAmAge` function includes the BMIQ method proposed by @teschendorff2012beta using Horvath's robust implementation that basically consists of an optimal R code implementation and optimization procedures. This normalization is recommended by Horvath since it improves their predictions. This normalization procedure is very time-consuming. In order to overcome these difficulties, we have parallelize this process using `BiocParallel` library. This step is not mandatory, so that, you can use your normalized data and set the argument `normalize` equal to FALSE (default).
 
 ## Missing data
-All the implemented methods require complete cases. `DNAmAge` function has an imputation method based on KNN implemented in the function `knn.impute` from `impute` Bioconductor package. This is performed when missing data is present in the CpGs used in Horvath's method. There is also another option based on a fast imputation method that uses a set of ~21K CpGs as reference to impute missing data which are proposed by Horvath's method. This can be performed by setting `fastImp=TRUE` and, of course, it is only recommended for 27K arrays. 
+All the implemented methods require complete cases. `DNAmAge` function has an imputation method based on KNN implemented in the function `knn.impute` from `impute` Bioconductor package. This is performed when missing data is present in the CpGs used in any of the computed clocks. There is also another option based on a fast imputation method that imputes missing values by the median of required CpGs as recommended in @bohlin2016prediction. This is recommended when analyzing 450K arrays since `knn.impute` for large datasets may be very time consuming. Fast imputation can be performed by setting `fastImp=TRUE` which is not the default value. 
 
 ## Cell counts
 The EEAA method requires to estimate cell counts. We use the package `meffil` (@min2018meffil) that provides some functions to estimate cell counts using predefined datasets. This is performed by setting `cell.count=TRUE` (default value). The reference panel is passed through the argument `cell.count.reference`. So far, the following options are available:
@@ -359,6 +359,14 @@ head(ga.progress)
 
 Some of the clocks require more CpGs than those available in 27K arrays. Here we illustrate how to estimate all the available DNA methylation biomarkers using data from .....  TO BE SUPPLIED.
 
+
+# Checking availability of CpGs to compute different clocks
+By default the package computes the different clocks previously 
+described except gestational age and skin clocks. The user may verify whether his/her data contains the required CpGs of each clock including these two by:
+
+```{r check}
+cpgs.ok <- checkClocks(gse19711)
+```
 
 # References
 
