--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -1,3 +1,37 @@
+@article{bohlin2016prediction,
+  title={Prediction of gestational age based on genome-wide differentially methylated regions},
+  author={Bohlin, Jon and H{\aa}berg, Siri Eldevik and Magnus, Per and Reese, Sarah E and Gjessing, H{\aa}kon K and Magnus, Maria Christine and Parr, Christine Louise and Page, CM and London, Stephanie J and Nystad, Wenche},
+  journal={Genome biology},
+  volume={17},
+  number={1},
+  pages={207},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+@article{mayne2017accelerated,
+  title={Accelerated placental aging in early onset preeclampsia pregnancies identified by DNA methylation},
+  author={Mayne, Benjamin T and Leemaqz, Shalem Y and Smith, Alicia K and Breen, James and Roberts, Claire T and Bianco-Miotto, Tina},
+  journal={Epigenomics},
+  volume={9},
+  number={3},
+  pages={279--289},
+  year={2017},
+  publisher={Future Medicine}
+}
+
+@article{lee2019placental,
+  title={Placental epigenetic clocks: estimating gestational age using placental DNA methylation levels},
+  author={Lee, Yunsung and Choufani, Sanaa and Weksberg, Rosanna and Wilson, Samantha L and Yuan, Victor and Burt, Amber and Marsit, Carmen and Lu, Ake T and Ritz, Beate and Bohlin, Jon and others},
+  journal={Aging (Albany NY)},
+  volume={11},
+  number={12},
+  pages={4238},
+  year={2019},
+  publisher={Impact Journals, LLC}
+}
+
+
 @article{marabita2013evaluation,
   title={An evaluation of analysis pipelines for DNA methylation profiling using the Illumina HumanMethylation450 BeadChip platform},
   author={Marabita, Francesco and Almgren, Malin and Lindholm, Mal{\'e}ne E and Ruhrmann, Sabrina and Fagerstr{\"o}m-Billai, Fredrik and Jagodic, Maja and Sundberg, Carl J and Ekstr{\"o}m, Tomas J and Teschendorff, Andrew E and Tegn{\'e}r, Jesper and others},
