--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE,
 
 # Introduction
 
-This manual describes how to estimate chronological and gestational DNA methylation (DNAm) age as well as other age-related biomarkers using different methylation clocks. The package includes the following estimators:
+This manual describes how to estimate chronological and gestational DNA methylation (DNAm) age as well as biological age using different methylation clocks. The package includes the following estimators:
 
 
 For chronological DNAm age (in years):
@@ -37,12 +37,11 @@ For chronological DNAm age (in years):
      - **EEAA** (Extrinsic Epigenetic Age Acceleration): Residuals obtained after regressing DNAmAge and chronological age. This measure was also known as DNAmAge acceleration residual in the first Horvath's paper.
 - **Hannum's clock**: It uses 71 CpGs described in @hannum2013genome. It was trained using 450K array in blood samples. Another are-related biomarer is also computed:
      - **AMAR** (Apparent Methylomic Aging Rate): Measure proposed in @hannum2013genome computed as the ratio between DNAm age and the chronological age.
-- **Levine's clock** (also know as DNAm PhenoAge): It uses 513 CpGs described in @levine2018epigenetic. It was trained using 27K, 450K and EPIC arrays in blood samples.
 - **BNN**: It uses Horvath's CpGs to train a Bayesian Neural Network (BNN) to predict DNAm age as described in @alfonso2018.
 - **Horvath's skin clock**: Epigenetic clock for skin and blood cells. It uses 391 CpGs described in @horvath2018epigenetic. It was trained using 450K EPIC arrays in skin and blood sampels.
 
 
-For chronological DNAm age (in months):
+For gestational DNAm age (in months):
 
 - **Knight's clock**: It uses 148 CpGs described in @knight2016epigenetic. It was trained using 27K and 450K arrays in coord blood samples.
 - **Bohlin's clock**: It uses 96 CpGs described in @bohlin2016prediction. It was trained using 450K array in coord blood samples.
@@ -51,6 +50,12 @@ For chronological DNAm age (in months):
      - **RPC clock**: Robust placental clock (RPC). It uses 558 CpG sites.
      - **CPC clock**: Control placental clock (CPC). It usses 546 CpG sites.
      - **Refined RPC clock**: Useful for uncomplicated term pregnancies (e.g. gestational age >36 weeks). It uses 396 CpG sites.
+
+
+The biological DNAm clocks implemented in our package are:
+
+- **Levine's clock** (also know as PhenoAge): It uses 513 CpGs described in @levine2018epigenetic. It was trained using 27K, 450K and EPIC arrays in blood samples.
+
 
 
 The main aim of this package is to facilitate the interconnection with R and Bioconductor's infrastructure and, hence, avoiding submitting data to online calculators. Additionally, `methylclock` also provides an unified way of computing DNAm age to help downstream analyses.
@@ -90,9 +95,9 @@ library(ggpmisc)
 library(GEOquery)
 ```
 
-# XXXXXXX
+# DNA Methylation clocks
 
-The main function to estimate chronological DNAm age is called `DNAmAge` while the gestational DNAm age is estimated using `DNAmGA` function. Both functions have similar input arguments. Next subsections detail some of the important issues to be consider before computind DNAm clocks. 
+The main function to estimate chronological and biological mDNA age is called `DNAmAge` while the gestational DNAm age is estimated using `DNAmGA` function. Both functions have similar input arguments. Next subsections detail some of the important issues to be consider before computind DNAm clocks. 
 
 ## Data format
 The methylation data is given in the argument `x`. They can be either beta or M values. The argument `toBetas` should be set to TRUE when M values are provided. The `x` object can be:
@@ -103,13 +108,32 @@ The methylation data is given in the argument `x`. They can be either beta or M 
 
 - A **GenomicRatioSet** object, the default method to encapsulate methylation data in `minfi` Bioconductor package.
 
-- An **ExpressionSet** object as obtained, for instance, when downloading methylation data from GEO. 
+- An **ExpressionSet** object as obtained, for instance, when downloading methylation data from GEO (https://www.ncbi.nlm.nih.gov/geo/). 
 
 ## Data nomalization
 In principle, data can be normalized by using any of the existing standard methods such as QN, ASMN, PBC, SWAN, SQN, BMIQ (see a revision of those methods in @wang2015systematic). `DNAmAge` function includes the BMIQ method proposed by @teschendorff2012beta using Horvath's robust implementation that basically consists of an optimal R code implementation and optimization procedures. This normalization is recommended by Horvath since it improves the predictions for his clock. This normalization procedure is very time-consuming. In order to overcome these difficulties, we have parallelize this process using `BiocParallel` library. This step is not mandatory, so that, you can use your normalized data and set the argument `normalize` equal to FALSE (default).
 
 ## Missing data
 All the implemented methods require complete cases. `DNAmAge` function has an imputation method based on KNN implemented in the function `knn.impute` from `impute` Bioconductor package. This is performed when missing data is present in the CpGs used in any of the computed clocks. There is also another option based on a fast imputation method that imputes missing values by the median of required CpGs as recommended in @bohlin2016prediction. This is recommended when analyzing 450K arrays since `knn.impute` for large datasets may be very time consuming. Fast imputation can be performed by setting `fastImp=TRUE` which is not the default value. 
+
+## Missing CpGs of DNAm clocks
+By default the package computes the different clocks when there are more than 80% of the required CpGs of each method. Nothing is required when having missing CpGs since the main functions will return NA for those estimators when this criteria is not meet. Let us use a test dataset (`MethylationData`) which is available within the package to illustrate the type of information we are obtaining:
+
+```{r check}
+cpgs.missing <- checkClocks(MethylationData)
+```
+
+```{r checkGA}
+cpgs.missing.GA <- checkClocksGA(MethylationData)
+```
+
+The objects `cpgs.missing` and `cpgs.missing.GA` are lists havint the missing CpGs of each clock
+
+```{r showMissing}
+names(cpgs.missing)
+cpgs.missing$Hannum
+```
+
 
 ## Cell counts
 The EEAA method requires to estimate cell counts. We use the package `meffil` (@min2018meffil) that provides some functions to estimate cell counts using predefined datasets. This is performed by setting `cell.count=TRUE` (default value). The reference panel is passed through the argument `cell.count.reference`. So far, the following options are available:
@@ -123,7 +147,7 @@ The EEAA method requires to estimate cell counts. We use the package `meffil` (@
 - **"saliva gse48472"**: Reference generated from the multi-tissue pannel from @slieker2013identification. It includes Buccal, CD4T, CD8T, Mono, Bcell, NK, Gran.
 
 
-# Chronological DNAm age estimation
+# Chronological and biological DNAm age estimation
 
 Next we illustrate how to estimate the chronological DNAm age using several datasets which aim to cover different data input formats.
 
@@ -202,7 +226,7 @@ age.example55 <- DNAmAge(MethylationData, age=age)
 age.example55
 ```
 
-Then, we can compare, for instance, the DNAmAge estimates between Autistic and control individuals by using a non-parametric test (low sample size)
+Then, we can compare, for instance, the DNAmAge estimates between Autistic and control individuals by using a non-parametric test (NOTE: use t-test for large sample sizes)
 
 ```{r compare_autistic}
 autism <- covariates$diseaseStatus
@@ -210,12 +234,12 @@ kruskal.test(age.example55$Horvath ~ autism)
 kruskal.test(age.example55$BNN ~ autism)
 ```
 
-## DNAmAge prediction on healthy people (`ExpressionSet` data)
+## Chronological age prediction usiong `ExpressionSet` data
 
 One may be interested in assessing association between chronologial age and DNA methylation age or evaluating how well chronological age is predicted by DNAmAge. In other to illustrate this analysis we downloaded data from GEO corresponding to a set of healthy individuals (GEO accession number GSE58045). Data can be retrieved into R by using `GEOquery` package as an `ExpressionSet` object that can be the input of our main function. 
 
 ```{r get_gse58045, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/epigeneticclock"
+ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
 load(file.path(ff, "data/GSE58045.Rdata"))
 ``` 
 
@@ -334,56 +358,58 @@ TestDataset[1:5,]
 The Gestational Age (in months) is simply computed by
 
 ```{r age_test}
-ga.test <- DNAmAge(TestDataset, GestationalAge = TRUE)
+ga.test <- DNAmGA(TestDataset)
 ga.test
 ```
 The results are the same as those described in the additional file 7 of @knight2016epigenetic (link [here](https://static-content.springer.com/esm/art%3A10.1186%2Fs13059-016-1068-z/MediaObjects/13059_2016_1068_MOESM7_ESM.docx))
 
-Let us continue by illustrating how to compute GA of real examples. The PROGRESS cohort data is available in the additional file 8 of  @knight2016epigenetic. It can be retrieved in to R by simply:
+Let us continue by illustrating how to compute GA of real examples. The PROGRESS cohort data is available in the additional file 8 of  @knight2016epigenetic. It is availabel at `methylclock` as a `tibble`:
 
-```{r get_progress, eval=FALSE}
-progress <- read.csv("PROGRESS_data.csv", as.is=TRUE)
+```{r get_progress}
+progress_data
 ```
 
-```{r get_progress_ok, echo=FALSE}
-progress <- read.csv(file.path(ff, "data/PROGRESS_data.csv"), as.is=TRUE)
-```
-
-This data is having different variables (in rows) and CpGs to reproduce some of the analyses performed in @knight2016epigenetic. The first column has the name of those variables:
+This file also contains different variables that are available in this `tibble`. The 
 
 ```{r show_progress}
-progress[1:15, 1]
+progress_vars
 ```
 
-The requiered data frame including CpGs as well as covariates such as birthweight can be obtained by:
+Clinical Variables including clinical assesment of gestational age (EGA) are available at this `tibble`
 
-```{r get_progress_data}
-birthweight <- as.numeric(unlist(progress[5, -1]))
-EGA <- as.numeric(unlist(progress[4, -1]))
-cpgs <- data.frame(lapply(progress[-c(1:10), -1], as.numeric))
-dat1 <- data.frame(CpGName=progress[-c(1:10), 1], cpgs)
-dat1[1:4, 1:5]
+```{r progressClin}
+progress_vars
 ```
 
 The Gestational Age (in months) is simply computed by
 
 ```{r age_progress}
-ga.progress <- DNAmAge(dat1, GestationalAge = TRUE)
+ga.progress <- DNAmGA(progress_data)
 head(ga.progress)
 ```
 
-# Example with a 450K illumina array
 
-Some of the clocks require more CpGs than those available in 27K arrays. Here we illustrate how to estimate all the available DNA methylation biomarkers using data from .....  TO BE SUPPLIED.
+We can compare these results with the clinical GA available in the variable EGA
 
-
-# Checking availability of CpGs to compute different clocks
-By default the package computes the different clocks previously 
-described except gestational age and skin clocks. The user may verify whether his/her data contains the required CpGs of each clock including these two by:
-
-```{r check}
-cpgs.ok <- checkClocks(gse19711)
+```{r plot_progress}
+plotDNAmAge(ga.progress$Knigth, progress_vars$EGA, 
+            tit="GA Knight's method", 
+            clock="GA")
 ```
+
+Figure 3b (only for PROGRESS dataset) in @knight2016epigenetic representing the correlation between GA acceleration and birthweight.can be reproduced by
+
+```{r plotAcc}
+library(ggplot2)
+progress_vars$acc <- ga.progress$Knigth - progress_vars$EGA
+p <- ggplot(data=progress_vars, aes(x = acc, y = birthweight)) +
+  geom_point() +
+  geom_smooth(method = "lm", se=FALSE, color="black") +
+  xlab("GA acceleration") +
+  ylab("Birthweight (kgs.)") 
+p
+```
+
 
 # References
 
