added PbdDE clock

--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE,
 
 #  Description of implemented clocks
 
-This manual describes how to estimate chronological and gestational DNA methylation (DNAm) age as well as biological age using different methylation clocks.The package includes the following estimators:
+This manual describes how to estimate chronological and gestational DNA methylation (DNAm) age as well as biological age using different methylation clocks. The package includes the following estimators:
 
 ## Chronological DNAm age (in years)
 
@@ -38,9 +38,10 @@ This manual describes how to estimate chronological and gestational DNA methylat
      - **AMAR** (Apparent Methylomic Aging Rate): Measure proposed in @hannum2013genome computed as the ratio between DNAm age and the chronological age.
 - **BNN**: It uses Horvath's CpGs to train a Bayesian Neural Network (BNN) to predict DNAm age as described in @alfonso2018.
 - **Horvath's skin+blood clock (Horvath2)**: Epigenetic clock for skin and blood cells. It uses 391 CpGs described in @horvath2018epigenetic. It was trained using 450K EPIC arrays in skin and blood sampels.
+- **PedBE clock**: Epigenetic clock from buccal epithelial swabs. It's intended purpose is buccal samples from individuals aged 0-20 years old. It uses 84 CpGs described in @mcewen2019pedbe. The authors gathered 1,721 genome-wide DNAm profiles from 11 different cohorts with individuals aged 0 to 20 years old. 
 
 
-## Gestational DNAm age (in months)
+## Gestational DNAm age (in weeks)
 
 - **Knight's clock**: It uses 148 CpGs described in @knight2016epigenetic. It was trained using 27K and 450K arrays in coord blood samples.
 - **Bohlin's clock**: It uses 96 CpGs described in @bohlin2016prediction. It was trained using 450K array in coord blood samples.
@@ -65,7 +66,7 @@ The package depends on some R packages that can be previously installed into you
 
 ```{r install_req_packages, eval=FALSE}
 library(BiocManager)
-install(c("tidyverse", "impute", "Rcpp"))
+install(c("tidyverse", "impute", "Rcpp", "GAprediction"))
 
 library(devtools)
 install_github("perishky/meffil")
