--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -1,3 +1,12 @@
+@article{mcewen2019pedbe,
+  title={The PedBE clock accurately estimates DNA methylation age in pediatric buccal cells},
+  author={McEwen, Lisa M and O’Donnell, Kieran J and McGill, Megan G and Edgar, Rachel D and Jones, Meaghan J and MacIsaac, Julia L and Lin, David Tse Shen and Ramadori, Katia and Morin, Alexander and Gladish, Nicole and others},
+  journal={Proceedings of the National Academy of Sciences},
+  pages={201820843},
+  year={2019},
+  publisher={National Acad Sciences}
+}
+
 @article{bohlin2016prediction,
   title={Prediction of gestational age based on genome-wide differentially methylated regions},
   author={Bohlin, Jon and H{\aa}berg, Siri Eldevik and Magnus, Per and Reese, Sarah E and Gjessing, H{\aa}kon K and Magnus, Maria Christine and Parr, Christine Louise and Page, CM and London, Stephanie J and Nystad, Wenche},
