--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -151,8 +151,8 @@ The EEAA method requires to estimate cell counts. We use the package `meffil` (@
 
 Next we illustrate how to estimate the chronological DNAm age using several datasets which aim to cover different data input formats.
 
-## Horvath's example (data in `csv` format)
-Let us start by reproducing the results proposed in @horvath2013dna. The file 'MethylationDataExample55.csv" contains an example used in their tutorial (available [here](https://dnamage.genetics.ucla.edu/home)). These data are available through `methylclock` package. Although these data can be loaded into R by using standard functions such as `read.csv` we hihgly recommend to use functions from `tidiverse`, in particular `read_csv` from `readr` package. The main reason is that currently researchers are analyzing Illumina 450K or EPIC arrays that contains a huge number of CpGs that can take a long time to be loaded when using basic importing R function. These functions import `csv` data as tibble which is one of the possible formats of `DNAmAge` function
+## Data in Horvath's format (e.g. `csv` with CpGs in rows)
+Let us start by reproducing the results proposed in @horvath2013dna. It uses the format available in the file 'MethylationDataExample55.csv" from his tutorial (available [here](https://dnamage.genetics.ucla.edu/home)). These data are available at `methylclock` package. Although these data can be loaded into R by using standard functions such as `read.csv` we hihgly recommend to use functions from `tidiverse`, in particular `read_csv` from `readr` package. The main reason is that currently researchers are analyzing Illumina 450K or EPIC arrays that contains a huge number of CpGs that can take a long time to be loaded when using basic importing R function. These functions import `csv` data as tibble which is one of the possible formats of `DNAmAge` function
 
 ```{r load_horvath_example}
 library(tidyverse)
@@ -209,6 +209,15 @@ DNAmAge can be estimated by simply:
 ```{r DNAmAge_horvath}
 age.example55 <- DNAmAge(MethylationData)
 age.example55
+```
+
+By default all available clocks (Hovarth, Hannum, Levine, BNN, Hovart2 and PedBE) are estimated. One may select a set of clocks by using the argument `clocks` as following:
+
+
+```{r DNAmAge_horvath}
+age.example55.sel <- DNAmAge(MethylationData, 
+                             clocks=c("Horvath", "BNN"))
+age.example55.sel
 ```
 
 
